--- a/shared.css
+++ b/shared.css
@@ -35,13 +35,15 @@
 html, body {
 	min-height: 100vh;
 	min-width: 100vw;
+	
 	font-family: var(--font-family);
+	color: var(--color-primary);
+	font-size: 16px;
+	
 	background: var(--color-bg);
 	background-image: radial-gradient(circle at 1px 1px, var(--color-primary) 1px, transparent 0);
   	background-size: 20px 20px;
-	color: var(--color-primary);
-	font-size: 16px;
-	z-index: -99;
+
 }
 
 .background-color-4ecdc4 { background-color: var(--color-api);	}
@@ -215,10 +217,14 @@ button:hover {
     left: 0;
     width: 500px;
     height: 500px;
-	z-index: -1;
+	z-index: 1;
 	pointer-events: none;
 	top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+
+.z-index-2 { z-index: 2; }
+
+.pointer-events-none { pointer-events:  none; }
