--- a/shared.css
+++ b/shared.css
@@ -32,6 +32,10 @@
 	padding: 0;
 }
 
+html {
+    font-size: clamp(14px, 1.2vw, 22px);
+}
+
 html, body {
 	min-height: 100vh;
 	min-width: 100vw;
@@ -69,6 +73,25 @@ html, body {
 
 
 .overflow-hidden { overflow: hidden; }
+
+
+
+
+
+
+
+.width-100percent { width: 100%; }
+.width-50percent  { width: 50%; }
+.width-30percent  { width: 30%; }
+
+.width-1rem { width: 1rem; }
+.width-20rem      { width: 20rem; }
+
+.height-100percent { height: 100%; }
+.height-10rem      { height: 10rem; }
+
+
+
 
 
 .flex { display: flex; }
@@ -140,6 +163,8 @@ html, body {
 *				  Buttom
 */
 
+.margin-x-0-49rem { margin-left: 0.40rem; margin-right: 0.40rem; }
+
 .margin-y-0-75rem { margin-top: 0.75rem; margin-bottom: 0.75rem; }
 
 
@@ -172,7 +197,7 @@ html, body {
 
 .padding-y-0-75rem { padding-top: 0.75rem; padding-bottom: 0.75rem; }
 
-.text-align-center { text-align: center; }
+
 
 
 .transform-rotate-45deg { transform: rotate(45deg); }
@@ -188,17 +213,21 @@ html, body {
 
 
 
-.button { transition: transform 0.50s ease; }
+.font-size-0-9rem { font-size: 0.9rem; }
+
+.font-size-1rem { font-size: 1rem; }
+
+.font-size-1-25rem { font-size: 1.25rem; }
+
+.text-align-center { text-align: center; }
+
+
+button { transition: transform 0.50s ease; }
 
 button:hover {
     transform: translateY(-2px) translateX(-2px) scale(1.02);
 	cursor: pointer;
 }
-
-/* .hover-rotate-10deg:hover {
-    transform: rotate(10deg);
-	transition: transform 0.3s ease;
-} */
 
 
 .border-radius-circle {
@@ -206,9 +235,6 @@ button:hover {
 	aspect-ratio: 1;
 	border-radius: 50%;
 }
-
-
-.width-bg { width: 100%; }
 
 
 .position-bg {
@@ -228,3 +254,20 @@ button:hover {
 .z-index-2 { z-index: 2; }
 
 .pointer-events-none { pointer-events:  none; }
+
+
+@media (min-width: 640px) {
+    .screen-small-font-size-1-25rem { font-size: 1.25rem; }
+}
+
+@media (min-width: 768px) {
+    .screen-medium-font-size-1-5rem { font-size: 1.5rem; }
+}
+
+@media (min-width: 1024px) {
+    .screen-large-font-size-2rem { font-size: 2rem; }
+}
+
+@media (min-width: 1280px) {
+	.screen-xlarge-font-size-2rem {font-size: 2rem; }
+}
