--- a/shared.css
+++ b/shared.css
@@ -67,16 +67,14 @@ html, body {
 }
 
 .background-linear-gradient {
-	background: linear-gradient(
+	background: repeating-linear-gradient(
 		to bottom left,
-		#ffffff 0px,
-		#ffffff 20px,
-		#1e90ff 20px,
-		#1e90ff 40px,
-		/* #E7E7E7 5%, */
-		/* #1e90ff */
+		  #EDEDED 0px,
+		#EDEDED 20px,
+		#E7E7E7 20px,
+		#E7E7E7 40px
 	);
-	background-color: white;
+	background-color: #2d2d2d;
 }
 
 
@@ -95,10 +93,52 @@ html, body {
 
 
 .width-1rem { width: 1rem; }
-.width-20rem      { width: 20rem; }
+.width-20rem { width: 20rem; }
+
+.height-20rem { height: 20rem; }
 
 .height-10rem      { height: 10rem; }
 .height-100percent { height: 100%; }
+
+
+.grid { display: grid; }
+
+.stats {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 1rem;
+	row-gap: 0.5rem;
+	align-items: center;
+}
+
+.bar {
+	--value: 50;
+
+	position: relative;
+	width: 100%;
+	height: 1rem;
+	background: transparent;
+	border-style: solid;
+	border-width: var(--border-width);
+	border-color: var(--border-color);
+
+	overflow: hidden;
+}
+
+.bar::before {
+	content: "";
+	position: absolute;
+
+	/* inset: 0; */
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	width: calc(var(--value) * 1%);
+	background: var(--color-api);
+
+}
 
 
 .flex { display: flex; }
@@ -283,4 +323,5 @@ html, body {
 	top: 0;
 	right: 0;
 	bottom: 0;
+	left: 0;
 }
