--- a/shared.css
+++ b/shared.css
@@ -53,11 +53,12 @@ html, body {
 }
 
 
-
+.background-color-ff6b6b { background-color: var(--color-secondary); }
 .background-transparent { background: transparent; }
-.background-color-4ecdc4 { background-color: var(--color-api);	}
+.background-color-4ecdc4 { background-color: var(--color-api); }
 .background-color-FCFCFC { background-color: var(--poke-white); }
 .background-color-2d2d2d { background-color: var(--color-primary); }
+.background-color-ffcc00 { background-color: var(--color-accent); }
 
 .background-linear-gradiant-poke-ball {
 	background: linear-gradient(
@@ -139,6 +140,7 @@ html, body {
 
 .flex-gap-0-5rem { gap: 0.5rem }
 .flex-gap-1rem { gap: 1rem }
+.flex-gap-2rem { gap: 2rem }
 
 /* wrap */
 .flex-wrap { flex-wrap: wrap; }
@@ -207,7 +209,11 @@ html, body {
 .padding-1-5rem { padding: 1.5rem; }
 .padding-3rem { padding: 3rem; }
 
+
+.padding-x-1rem { padding-left: 1rem; padding-right: 1rem;}
+
 .padding-y-0-75rem { padding-top: 0.75rem; padding-bottom: 0.75rem; }
+
 
 
 
@@ -313,7 +319,7 @@ html, body {
 }
 
 .bar {
-	--value: 50;
+	--value: 0;
 
 	position: relative;
 	width: 100%;
@@ -324,6 +330,7 @@ html, body {
 	border-color: var(--border-color);
 
 	overflow: hidden;
+	transition: width 0.5s ease;
 }
 
 .bar::before {
@@ -346,3 +353,20 @@ img {
 	width: 100%;
 }
 
+hr {
+	padding: 0.1rem;
+	margin-top: 0.4rem;
+	background-color: #2d2d2d;
+}
+
+
+
+.poke-type {
+	background-color: #2d2d2d;
+	padding: 0.5rem;
+	color: var(--poke-white);
+}
+
+h1 {
+	display: inline;
+}
