--- a/shared.css
+++ b/shared.css
@@ -25,6 +25,8 @@
 
 	/* Custom */
 	--poke-white: #fcfcfc;
+	--poke-white-white: #fcfcfc;
+	
 
 	--background-dotted: radial-gradient(
 		circle at 1px 1px,
@@ -44,6 +46,12 @@
 		transparent 0
 	);
 }
+
+[data-theme="dark"] {
+	/* --poke-white: #2d2d2d; */
+  	--color-bg: #121212;
+}
+
 
 * {
 	box-sizing: border-box;
@@ -80,7 +88,7 @@ body {
 	background-color: var(--color-api);
 }
 .background-color-FCFCFC {
-	background-color: var(--poke-white);
+	background-color: var(--poke-white-white);
 }
 .background-color-2d2d2d {
 	background-color: var(--color-primary);
@@ -96,8 +104,8 @@ body {
 		var(--color-secondary) 45.1%,
 		var(--color-primary) 45.1%,
 		var(--color-primary) 55.5%,
-		var(--poke-white) 55.5%,
-		var(--poke-white) 100%
+		var(--poke-white-white) 55.5%,
+		var(--poke-white-white) 100%
 	);
 	/* background-color: #2d2d2d; */
 }
