--- a/shared.css
+++ b/shared.css
@@ -84,6 +84,10 @@ body {
 	background-color: #dbdbdb;
 }
 
+.background-color-FFE261 {
+	background-color: #FFE261;
+}
+
 .background-color-4ecdc4 {
 	background-color: var(--color-api);
 }
@@ -173,12 +177,12 @@ body {
 .grid-template-columns-repeat-3-1fr {
 	grid-template-columns: repeat(3, 1fr);
 
-	grid-template-columns: repeat(auto-fit, minmax(70px, auto));
+	/* grid-template-columns: repeat(auto-fit, minmax(70px, auto)); */
 	/* grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
 
-  grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
-  width: 100%;
-  max-width: 100px; */
+	grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
+	width: 100%;
+	max-width: 100px; */
 	justify-items: center;
 	justify-content: center;
 	/* align-items: center; */
@@ -203,6 +207,21 @@ body {
 	padding: 0.4;
 	transition: transform 0.5s ease;
 }
+
+
+.tmpevohover2 {
+	padding: 0.4rem;
+	padding: 0.4;
+	transition: transform 0.5s ease;
+	background-color: var(--poke-white-white);
+}
+
+.tmpevohover2:hover {
+	transform: translateY(-2px) translateX(-2px) scale(1.02);
+	background-color: var(--color-api);
+	cursor: pointer;
+}
+
 
 .tmpevohover:hover {
 	transform: translateY(-2px) translateX(-2px) scale(1.02);
@@ -380,9 +399,24 @@ body {
 	padding-right: 1rem;
 }
 
+.padding-x-0-75rem {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
+
+.padding-y-0-5rem {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
 .padding-y-0-75rem {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
+}
+
+.padding-y-1rem {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .transform-rotate-45deg {
@@ -414,10 +448,23 @@ body {
 	font-size: 1.25rem;
 }
 
+
 .font-weight-bold {
 	font-weight: 700;
 	font-weight: bold;
 }
+.font-weight-900 {
+	font-weight: 900;
+}
+
+
+
+.text {
+  min-width: 0;
+  max-width: 30rem;
+}
+
+
 
 .text-align-center {
 	text-align: center;
@@ -583,6 +630,20 @@ h1 {
 	border-bottom: 0.3rem dashed var(--border-color);
 }
 
+.tmp-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 per row */
+  gap: 1rem;
+
+  grid-auto-rows: 120px; 
+  max-height: calc(120px * 3 + 1rem * 2); 
+
+  overflow-y: auto;
+  padding: 1rem;
+}
+
+
+
 .oculta {
 	background-color: var(--color-habilidad-oculta);
 }
@@ -601,14 +662,7 @@ h1 {
 	justify-content: space-between;
 }
 
-/* 
-main {
-  /* max-width: 50%; */
-/* flex-wrap: wrap;
-  /* width: 100%;
-  /* margin: auto; */
 
-/* Tempral */
 
 /* historial */
 .item-historial {
