--- a/shared.css
+++ b/shared.css
@@ -781,3 +781,14 @@ h1 {
 .cargar {
 	color: var(--color-font-change);
 }
+
+
+@keyframes anim-blink {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.anim-blink {
+  animation: anim-blink 1s infinite;
+}
