--- a/shared.css
+++ b/shared.css
@@ -33,6 +33,7 @@
 		var(--color-primary) 1px,
 		transparent 0
 	);
+	
 
 	--sprite-gradient-white-1: #ededed;
 	--sprite-gradient-white-2: #e7e7e7;
@@ -45,11 +46,19 @@
 		var(--color-primary) 1px,
 		transparent 0
 	);
+
+	--poke-ball-top: #ff6b6b;
+	--poke-ball-bot: #fcfcfc;
+
+	--color-font-change: #2d2d2d;
 }
 
 [data-theme="dark"] {
 	/* --poke-white: #2d2d2d; */
   	--color-bg: #121212;
+	--poke-ball-top: #301638;
+
+	--color-font-change: #fcfcfc;
 }
 
 
@@ -71,6 +80,10 @@ body {
 	background: var(--color-bg);
 	background-image: var(--background-dotted);
 	background-size: 20px 20px;
+	transition:
+		background-color 0.3s ease,
+		color 0.3s ease,
+		border-color 0.3s ease;
 }
 
 .background-color-ff6b6b {
@@ -104,13 +117,16 @@ body {
 .background-linear-gradiant-poke-ball {
 	background: linear-gradient(
 		to bottom,
-		var(--color-secondary) 0%,
-		var(--color-secondary) 45.1%,
+		var(--poke-ball-top) 0%,
+		var(--poke-ball-top) 45.1%,
 		var(--color-primary) 45.1%,
 		var(--color-primary) 55.5%,
-		var(--poke-white-white) 55.5%,
-		var(--poke-white-white) 100%
+		var(--poke-ball-bot) 55.5%,
+		var(--poke-ball-bot) 100%
 	);
+	transition:
+		background-color 0.3s ease,
+		opacity 0.5s ease-in-out;
 	/* background-color: #2d2d2d; */
 }
 
@@ -168,6 +184,17 @@ body {
 }
 .height-50percent {
 	height: 50%;
+}
+
+.display-none {
+	visibility: hidden;
+	display: none;
+}
+
+.display-hidden {
+	display: none;
+	visibility: hidden;
+	/* display: none !important; */
 }
 
 .grid {
@@ -448,6 +475,10 @@ body {
 	font-size: 1.25rem;
 }
 
+.font-size-3rem {
+	font-size: 3rem;
+}
+
 
 .font-weight-bold {
 	font-weight: 700;
@@ -501,15 +532,12 @@ body {
 
 .position-bg {
 	position: fixed;
-	top: 0;
-	left: 0;
-	width: 500px;
-	height: 500px;
+	inset: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	z-index: 1;
 	pointer-events: none;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 }
 
 .z-index-2 {
@@ -742,11 +770,34 @@ h1 {
 }
 
 
+
+.tmp-poke-container {
+	width: 100%;
+}
+.tmp-poke-mod {
+	width: 700px;
+}
+
+.cargar {
+	color: var(--color-font-change);
+}
+
+
+@keyframes anim-blink {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.anim-blink {
+  animation: anim-blink 1s infinite;
+}
+
+
+
 /* =========================
    POKEBALL BG MÁS GRANDE
    ========================= */
-
-
 .position-bg{
   position: fixed;
   top: 50%;
@@ -769,4 +820,5 @@ div[data-name="pokeball"]{
 
 div[data-name="pokeball-ball"]{
   padding: 4rem; 
-}
+} 
+ 
