--- a/shared.css
+++ b/shared.css
@@ -26,14 +26,12 @@
 	/* Custom */
 	--poke-white: #fcfcfc;
 	--poke-white-white: #fcfcfc;
-	
 
 	--background-dotted: radial-gradient(
 		circle at 1px 1px,
 		var(--color-primary) 1px,
 		transparent 0
 	);
-	
 
 	--sprite-gradient-white-1: #ededed;
 	--sprite-gradient-white-2: #e7e7e7;
@@ -55,12 +53,11 @@
 
 [data-theme="dark"] {
 	/* --poke-white: #2d2d2d; */
-  	--color-bg: #121212;
+	--color-bg: #121212;
 	--poke-ball-top: #301638;
-
+	--poke-white: #9595ba;
 	--color-font-change: #fcfcfc;
 }
-
 
 * {
 	box-sizing: border-box;
@@ -80,9 +77,7 @@ body {
 	background: var(--color-bg);
 	background-image: var(--background-dotted);
 	background-size: 20px 20px;
-	transition:
-		background-color 0.3s ease,
-		color 0.3s ease,
+	transition: background-color 0.3s ease, color 0.3s ease,
 		border-color 0.3s ease;
 }
 
@@ -98,7 +93,7 @@ body {
 }
 
 .background-color-FFE261 {
-	background-color: #FFE261;
+	background-color: #ffe261;
 }
 
 .background-color-4ecdc4 {
@@ -124,9 +119,7 @@ body {
 		var(--poke-ball-bot) 55.5%,
 		var(--poke-ball-bot) 100%
 	);
-	transition:
-		background-color 0.3s ease,
-		opacity 0.5s ease-in-out;
+	transition: background-color 0.3s ease, opacity 0.5s ease-in-out;
 	/* background-color: #2d2d2d; */
 }
 
@@ -235,7 +228,6 @@ body {
 	transition: transform 0.5s ease;
 }
 
-
 .tmpevohover2 {
 	padding: 0.4rem;
 	padding: 0.4;
@@ -248,7 +240,6 @@ body {
 	background-color: var(--color-api);
 	cursor: pointer;
 }
-
 
 .tmpevohover:hover {
 	transform: translateY(-2px) translateX(-2px) scale(1.02);
@@ -479,7 +470,6 @@ body {
 	font-size: 3rem;
 }
 
-
 .font-weight-bold {
 	font-weight: 700;
 	font-weight: bold;
@@ -488,14 +478,10 @@ body {
 	font-weight: 900;
 }
 
-
-
 .text {
-  min-width: 0;
-  max-width: 30rem;
+	min-width: 0;
+	max-width: 30rem;
 }
-
-
 
 .text-align-center {
 	text-align: center;
@@ -659,18 +645,16 @@ h1 {
 }
 
 .tmp-grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 per row */
-  gap: 1rem;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr); /* 3 per row */
+	gap: 1rem;
 
-  grid-auto-rows: 120px; 
-  max-height: calc(120px * 3 + 1rem * 2); 
+	grid-auto-rows: 120px;
+	max-height: calc(120px * 3 + 1rem * 2);
 
-  overflow-y: auto;
-  padding: 1rem;
+	overflow-y: auto;
+	padding: 1rem;
 }
-
-
 
 .oculta {
 	background-color: var(--color-habilidad-oculta);
@@ -689,8 +673,6 @@ h1 {
 	flex: 1 1 250px;
 	justify-content: space-between;
 }
-
-
 
 /* historial */
 .item-historial {
@@ -769,8 +751,6 @@ h1 {
 	color: #666666;
 }
 
-
-
 .tmp-poke-container {
 	width: 100%;
 }
@@ -782,18 +762,21 @@ h1 {
 	color: var(--color-font-change);
 }
 
-
 @keyframes anim-blink {
-  0%   { opacity: 1; }
-  50%  { opacity: 0; }
-  100% { opacity: 1; }
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 .anim-blink {
-  animation: anim-blink 1s infinite;
+	animation: anim-blink 1s infinite;
 }
-
-
 
 /* =========================
    POKEBALL BG MÁS GRANDE
